--- a/index.html
+++ b/index.html
@@ -1,37 +1,118 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
-  <title>Mi página web</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Mi Portafolio</title>
+  <style>
+        body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    }
+
+        header {
+    background-color: #FFD8D8;
+    padding: 20px;
+    display: flex;
+   flex-direction: column;
+   align-items: center;
+   text-align: center;
+    }
+
+        img {
+    width: 150px; /* Ajusta el ancho de la imagen */
+    height: 150px; /* Ajusta la altura de la imagen de forma proporcional */
+    margin-right: 10px; /* Agrega un margen derecho para separar la imagen del texto */
+    border-radius: 50%;
+    }
+
+    h1 {
+    font-size: 36px;
+    margin-bottom: 10px;
+    }
+
+    p {
+    font-size: 18px;
+    margin-bottom: 20px;
+    }
+
+    section {
+    padding: 20px;
+    color: black; /* Cambia el color del texto a negro */
+    font-size: 16px; /* Cambia el tamaño del texto */
+    font-weight: bold; /* Cambia el peso de la fuente a negrita */
+    }
+
+    h2 {
+    font-size: 24px;
+    margin-bottom: 10px;
+    }
+
+    h3 {
+    font-size: 20px;
+    margin-bottom: 10px;
+    }
+
+    ul {
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+    }
+
+    li {
+    margin-bottom: 5px;
+    }
+
+    footer {
+    background-color: #FFD8D8;
+    padding: 20px;
+    text-align: center;
+    }
+
+  </style>
 </head>
 <body>
   <header>
-    <h1>Bienvenido a mi página web</h1>
-    <nav>
-      <ul>
-        <li><a href="#inicio">Inicio</a></li>
-        <li><a href="#acerca">Acerca de</a></li>
-        <li><a href="#contacto">Contacto</a></li>
-      </ul>
-    </nav>
+    <img src="https://lh3.googleusercontent.com/pw/AJFCJaU6qmucZc6L0_ZnHAnPwI2D6wvgf4kObe9NYUo-QRop-ckNnR_mlPFX-x5ADxxmQlhc_Iz4b1VFHd7mPNg6884ZE8wOEhJmhPqxnPyPG9mec-6ruqm25hwWndFQ5DA9Nn14rjjmfB6gvu_zEma0LIbXPBDRhDxSsWHiDAR-Cxl99X62GqPTGreBhZbl62Ttrv2zICW4zA4KsyaDjDYY3JI-vwkSvVO3HabIqiisf7KP6B70qfyp0LKO5y-xg6OIK9Uy-UhLtr0yDnm0elibMVMwsZevYsbiWDhK4GQpIMmQVnjSTdgMPdyGjIoPtC100XbW2-iIHIEt5a6tNh5ZzCiKuZTLKJI5UyftqVWNP5sOZpMP_lULN6z0gHJ0qLpx3Zv18Har9OhPMG9qmwlwDM2L_rfrl0Cn9zgx_JBMjsEr8QyAQQlT3hmkXyMqD4jq_eCr7n3YREhfOgTp681WnHUeRJvpffOzz1Dl3z_LbXijlnBeeYPxzQCofnz_FTLL7L-VtZDSx0H3uS24Vwg9yRWSBTYUc_UQzTlb6rhj_KXhjjb6kvc3tnJepq3Js0ssNIoaDlpyizB3AmDK-tT1D3BAoVaWjdBTu_CDi-4o-MgE4-qhiV4NsdBBG1tmHLu-NQOFryz7hNceF9oiV4Esvmd_NVypieH98NTKdhPxyn5Q929U_nURS8Aa5kiEItJaLsdCezoxwINiaJxYd2E0g1Ssagx2iFQbDuO3xsaOVTmtzQpyDq8erhy3g49hb2laZ4WdEAUgh-k2MfA2Aj71b6Pif0LRsafm_YvIF1eAibJIP1Fj2obmUlOT_kQ-bfjMlHO-4H5uZ83EKkAxBLNm1sjWIAHHfzXJ5Rzdp7nyT4Kppq5tGBHGVdpLFgsXx-aZmweKWsqQWAXZoHLsrzasJOccfjuxWV4BxafaRqGHF9EBjY8jnk_2ltDK59vgBa4V1jbGPgqGvO26F_dzK3owQEtG_VkFZaCyiL_EaHX5X5Zsmjx6USXyWmIP2rs_oygMAigejhmH3H6npMFmlLFD-JKZLIEC43KrNION7orUdiNv7Fph33OnwJG3a23LGcHops6yrtsx=w1190-h893-s-no?authuser=0" alt="">
+    <h1>Edy Cardenas</h1>
+    <p>Apasionada emprendedora de tecnología</p>
   </header>
 
-  <section id="inicio">
-    <h2>¡Hola!</h2>
-    <p>Bienvenido/a a mi página web.</p>
+  <section>
+    <h2>Sobre mí</h2>
+    <p>Soy una estudiante de desarrollo de software con habilidades en HTML, CSS, Python y Ruby. Me apasiona la tecnología y ayudar a emprendimientos digitales a alcanzar sus metas.</p>
   </section>
 
-  <section id="acerca">
-    <h2>Acerca de</h2>
-    <p>Esta es una página web de ejemplo.</p>
+  <section>
+    <h2>Experiencia</h2>
+    <ul>
+      <li>Colaboré en el desarrollo de aplicaciones web utilizando HTML, CSS y JavaScript.</li>
+      <li>Participé en la resolución de problemas técnicos y en la implementación de nuevas funcionalidades.</li>
+      <li>Trabajé en equipo para lograr resultados excepcionales en plazos ajustados.</li>
+    </ul>
   </section>
 
-  <section id="contacto">
-    <h2>Contacto</h2>
-    <p>Puedes contactarme en la siguiente dirección de correo electrónico: ejemplo@correo.com</p>
+  <section>
+    <h2>Proyectos</h2>
+    <ul>
+        <li>Trabaje en la aplicacion de un software contable para una microempresa de cafe</li>
+    </ul>
+  </section>
+
+  <section>
+    <h2>Habilidades</h2>
+    <ul>
+      <li>HTML5</li>
+      <li>CSS3</li>
+      <li>JavaScript</li>
+      <li>Python</li>
+      <li>Ruby</li>
+    </ul>
   </section>
 
   <footer>
-    <p>Derechos de autor &copy; 2023 - Mi página web</p>
+    <p>Contacto: correo@example.com | Teléfono: 123456789</p>
   </footer>
 </body>
 </html>
