--- a/index.html
+++ b/index.html
@@ -82,6 +82,13 @@
   <section>
     <h2>Sobre mí</h2>
     <p>Soy una estudiante de desarrollo de software con habilidades en HTML, CSS, Python y Ruby. Me apasiona la tecnología y ayudar a emprendimientos digitales a alcanzar sus metas.</p>
+    <h2>Redes sociales</h2>
+    <ul>
+        <li><a href="https://www.facebook.com">facebook</a></li>
+        <li><a href="https://www.twitter.com" >twitter</a></li>
+        <li><a href="https://www.instagram.com">instagram</a></li>
+        <li><a href="https://www.linkedin.com">linkedin</a></li>
+      </ul>
   </section>
 
   <section>
@@ -116,3 +123,4 @@
   </footer>
 </body>
 </html>
+
